--- a/registration-form/index.html
+++ b/registration-form/index.html
@@ -10,45 +10,72 @@
   <body>
     <h1>Registration Form</h1>
     <p>Please fill out this form with the required information</p>
-     <form action='https://register-demo.freecodecamp.org'>
-    <fieldset>
-        <label for="first-name">Enter Your First Name: <input id="first-name" type="text" required></label>
-        <label for="last-name">Enter Your Last Name: <input id="last-name" type="text" required></label>
-        <label for="email">Enter Your Email: <input id="email" type="email" required></label>
-        <label for="new-password">Create a New Password: <input id="new-password" type="password" minlength="8" required></label>
-    </fieldset>
-    <fieldset>
-      <label for="personal-account">
-        <input id="personal-account" type="radio" name="account-type"> Personal Account
-      </label>
-      <label for="business-account">
-        <input id="business-account" type="radio" name="account-type"> Business Account
-      </label>
-      <label for="terms-and-conditions">
-        <input id="terms-and-conditions" type="checkbox" required> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/" target="_blank">terms and condions</a>  
-      </label>
-    </fieldset>
-    <fieldset>
-      <label for="profile-picture">
-        <p>Upload a profile picture: </p>
-        <input id="profile-picture" type="file">
-      </label>
-      <label for="age">
-        <p>Input your age (years): </p>
-        <input id="age" type="number" min="13" max="120">
-      </label>
-      <label for="referrer">
-        <p>How did you hear about us?</p>
-      <select name="referre" id="referrer">
-        <option value="">(select one)</option>
-        <option value="1">freeCodeCamp News</option>
-        <option value="2">freeCodeCamp YouTube Channel</option>
-        <option value="3">freeCodeCamp Forum</option>
-        <option value="4">Other</option>
-      </select>
-      </label>
-      <label for="bio">Provide a bio: <textarea name="bio" id="bio" cols="30" rows="3" placeholder="I like coding on the beach..."></textarea></label>
-    </fieldset>
-    <input type="submit" value="Submit">
+    <form action="https://register-demo.freecodecamp.org">
+      <fieldset>
+        <label for="first-name"
+          >Enter Your First Name: <input id="first-name" type="text" required
+        /></label>
+        <label for="last-name"
+          >Enter Your Last Name: <input id="last-name" type="text" required
+        /></label>
+        <label for="email"
+          >Enter Your Email: <input id="email" type="email" required
+        /></label>
+        <label for="new-password"
+          >Create a New Password:
+          <input id="new-password" type="password" minlength="8" required
+        /></label>
+      </fieldset>
+      <fieldset>
+        <label for="personal-account">
+          <input id="personal-account" type="radio" name="account-type" />
+          Personal Account
+        </label>
+        <label for="business-account">
+          <input id="business-account" type="radio" name="account-type" />
+          Business Account
+        </label>
+        <label for="terms-and-conditions">
+          <input id="terms-and-conditions" type="checkbox" required /> I accept
+          the
+          <a
+            href="https://www.freecodecamp.org/news/terms-of-service/"
+            target="_blank"
+            >terms and condions</a
+          >
+        </label>
+      </fieldset>
+      <fieldset>
+        <label for="profile-picture">
+          Upload a profile picture:
+          <input id="profile-picture" type="file" />
+        </label>
+        <label for="age">
+          Input your age (years):
+          <input id="age" type="number" min="13" max="120" />
+        </label>
+        <label for="referrer">
+          How did you hear about us?
+          <select name="referre" id="referrer">
+            <option value="">(select one)</option>
+            <option value="1">freeCodeCamp News</option>
+            <option value="2">freeCodeCamp YouTube Channel</option>
+            <option value="3">freeCodeCamp Forum</option>
+            <option value="4">Other</option>
+          </select>
+        </label>
+        <label for="bio"
+          >Provide a bio:
+          <textarea
+            name="bio"
+            id="bio"
+            cols="30"
+            rows="3"
+            placeholder="I like coding on the beach..."
+          ></textarea>
+        </label>
+      </fieldset>
+      <input type="submit" value="Submit" />
+    </form>
   </body>
 </html>
